# Brother-AI

./: .dockerignore  .gitignore  .replit  CAPABILITIES.md  DEPLOY.md  Dockerfile  GITHUB_INTEGRATIONS.md  IMPLEMENTATION_GUIDE.md  README.md  amvera.yaml  amvera.yml  pyproject.toml  replit.md  requirements.txt
examples/: test_llm.py
kai/: bus.py  config.py  kai.py  logger.py  main.py  shutdown.py  watchdog.py
kai/action/: rate_limit.py  will.py
kai/body/: sleep.py
kai/dna/: ethics.py  identity.py  neurochem.py  temperament.py  values.py
kai/limbs/: custom_api.py  hf_client.py  telegram_bot.py  web_search.py  world_apis.py
kai/llm/: custom_provider.py  router.py
kai/mind/: analogy.py  anticipation.py  attention.py  beliefs.py  creative.py  curiosity.py  drives.py  emotional_memory.py  feedback.py  goals.py  memory.py  meta_learner.py  mood.py  narrative.py  personality_snapshot.py  planner.py  predictions.py  prompt_evolution.py  self_model.py  shadow.py  working_memory.py
kai/perception/: anomaly.py  health.py  resources.py  temporal.py  world_sense.py
kai/social/: brother_model.py  contagion.py  linguistic.py  multi_user_manager.py  telegram_approval.py
kai/tests/: __init__.py  test_custom_provider.py  test_syntax.py
kai/web/: server.py
kai/web/static/: app.css  app.js  index.html
