[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.0",
    "chromadb>=0.5.0",
    "duckduckgo-search>=8.1.1",
    "openai>=1.50.0",
    "python-telegram-bot[job-queue]==21.6",
    "trafilatura>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
